#1710 - fixed spacing for device info

--- a/server/http-dashboard/app/scenes/Devices/components/Device/components/DeviceInfo/styles.less
+++ b/server/http-dashboard/app/scenes/Devices/components/Device/components/DeviceInfo/styles.less
@@ -2,10 +2,6 @@
   overflow: auto;
 }
 
-.device--device-info-details {
-  max-width: 700px;
-}
-
 .device--device-info-details .fieldset {
   margin: 32px 16px;
   &:first-child {
